fixed overlap cover info image

--- a/src/app/home/profile-gate/profile-gate.component.css
+++ b/src/app/home/profile-gate/profile-gate.component.css
@@ -10,7 +10,7 @@ a {
   bottom: 0;
   text-align: center;
   background: #141414;
-  z-index: 1;
+  z-index: 100;
 }
 
 .profile-gate-container .centered-div {
